# nestra-mvp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  MISSING_IMPLEMENTATION.md  Makefile  README.md  docker-compose.yml  test_hook.txt
backend/: .env.example  CLAUDE.md  Makefile  SKILL.md  alembic.ini  pyproject.toml  run_tests.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_baseline_schema.py  0002_identity_tables.py  0003_rls_policies.py
backend/scripts/: README.md  export_openapi.py  fresh_install.sql  migrate.sql
backend/src/: README.md  config.py  db.py  dependencies.py  main.py
backend/src/alerts/: __init__.py  models.py  service.py
backend/src/api/: README.md  dependencies.py
backend/src/api/v1/: README.md  alerts.py  chat.py  devices.py  insights.py  integrations.py  intelligence.py  properties.py  rooms.py  router.py
backend/src/common/: errors.py  pagination.py  ratelimit.py  tenant.py
backend/src/core/: __init__.py  tables.py
backend/src/db/: README.md  setup.py
backend/src/demo/: README.md  alerts.py  ble_general.py  data.py  govee.py  govee_ble.py  history.py  insights.py  intelligence.py  lifx.py  routes.py
backend/src/demo/tests/: README.md  test_ble_general.py  test_govee_ble.py
backend/src/devices/: __init__.py  capabilities.py  models.py  registry.py  schemas.py  service.py  spire.py  state_history.py  traits.py
backend/src/devices/tests/: test_capabilities.py  test_registry.py  test_spire.py  test_traits.py
backend/src/identity/: README.md  __init__.py  api.py  enums.py  models.py  security.py  service.py
backend/src/identity/api/: README.md  routes.py  schemas.py
backend/src/identity/domain/: README.md  roles.py  (+2 more)
backend/src/insights/: __init__.py  models.py  service.py
backend/src/integrations/: README.md  __init__.py  adapter.py  base.py  factory.py  models.py  provisioning.py  registry.py  scanner.py  sync.py
backend/src/intelligence/: README.md  __init__.py  domain.py  executor.py  services.py
backend/src/models/: alert.py  database.py  device.py  insight.py  property.py
backend/src/properties/: __init__.py  room_service.py  rooms.py  service.py
backend/src/property/: README.md  __init__.py  domain.py
backend/src/services/: alert_service.py  device_registry.py  device_service.py  insight_service.py  property_service.py  room_service.py  state_history_service.py
backend/src/shared/: README.md  __init__.py  db.py  middleware.py  ratelimit.py
backend/src/spire/: __init__.py  adapter.py  device.py  event.py  property.py  traits.py
backend/src/utility/: README.md
backend/tests/: test_auth.py  test_device.py  test_hardening.py  test_migrations.py  test_property_resources.py  test_rls_isolation.py  test_schemas.py  test_shelly_adapter.py  test_smoke.py  test_traits.py
backend/tests/demo/: test_providers.py
backend/tests/identity/: test_domain.py  test_repository_models.py  test_signup_service.py
backend/tests/property/: test_bluetooth.py
(+329 files in other folders)
